[tool.poetry]
name = "data-privacy-vault"
version = "0.1.0"
description = ""
authors = ["Sesmi Athiyarath <sesmi.athiyarath@siemens-healthineers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
pytest = "^8.0.0"
requests = "^2.31.0"
redis = "^5.0.1"
fernet = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
